2010-11-15 16:34  sloot

	* [r6877] .: propset

2010-11-15 16:12  sloot

	* [r6876] .cvsignore, config/.cvsignore, include/.cvsignore,
	  include/tadpole/.cvsignore, src/.cvsignore: slack removed

2010-11-15 13:20  sloot

	* [r6869] .: Step 3

2010-11-15 13:19  sloot

	* [r6867] rebase step 1

2010-09-06 11:01  sloot

	* [r6006] better debug output

2010-09-01 11:02  sloot

	* [r5942] backported improvement from Frog

2010-08-31 14:39  sloot

	* [r5919] get rid of Boost

2010-08-01 08:59  antalb

	* [r5611] updated Mbt tagger files: Gertjan van Noord corrections,
	  repaired invalid CGN tags

2010-07-06 15:45  sloot

	* [r5321] try to avoid memory leaks

2010-07-05 09:34  sloot

	* [r5304] fixed problem witk oneliners without \n

2010-06-08 16:52  mvgompel

	* [r4975] (this is a duplicate of the tadpoleclient in PyNLPl,
	  ideally it shouldn't be in SVN multiple times, but unfortunately
	  there seems to be no symbolic link function in SVN). I do think
	  it has added value to ship it like this with Tadpole (and Frog)

2010-06-08 13:57  sloot

	* [r4964] fixed config problem on recent Ubuntu versions

2010-06-07 10:58  sloot

	* [r4927] fixed usage

2010-06-07 10:52  antalb

	* [r4926] double hyphens for --testdir and --outputdir, corrected
	  correct output

2010-06-07 09:35  sloot

	* [r4924] Bumped version after release

2010-06-02 21:20  antalb

	* [r4868] a few more details in the new README for version 0.6

2010-06-02 21:01  antalb

	* [r4867] updated the README

2010-05-17 12:55  antalb

	* [r4610] resolved issue with words containing "nationaliteit" in
	  MBMA igtree

2010-05-10 10:42  sloot

	* [r4551] some better logging

2010-05-03 10:41  antalb

	* [r4522] several error-driven additions to money, abbreviations,
	  MWUs

2010-04-30 09:42  antalb

	* [r4515] moved semicolon to the right place

2010-04-29 11:19  mvgompel

	* [r4497] added syntax help on --skip

2010-04-26 14:44  sloot

	* [r4465] use our own homebrewn openmp.m4 check for openMP